[gd_scene load_steps=19 format=2]

[ext_resource path="res://Images/Other/Pie_Bg_128.png" type="Texture" id=1]
[ext_resource path="res://Images/Other/Pie_Fill_128.png" type="Texture" id=2]
[ext_resource path="res://addons/AnomalyAcesTable/Scripts/Helper/TablePlugin.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Exp1 UI.gd" type="Script" id=8]
[ext_resource path="res://Themes/new_theme.tres" type="Theme" id=9]
[ext_resource path="res://DarkTheme/Dark.theme" type="Theme" id=10]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0, 0.537255, 0.631373, 1 )

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0.862745, 0.101961, 0.203922, 1 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.631373, 0, 0.337255, 1 )

[sub_resource type="Image" id=29]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 160, 160, 160, 3, 222, 222, 222, 63, 223, 223, 223, 114, 223, 223, 223, 89, 217, 217, 217, 28, 54, 54, 54, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 111, 111, 111, 38, 223, 223, 223, 200, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 246, 222, 222, 222, 118, 55, 55, 55, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 163, 163, 163, 9, 223, 223, 223, 215, 223, 223, 223, 229, 217, 217, 217, 85, 167, 167, 167, 12, 220, 220, 220, 39, 219, 219, 219, 160, 223, 223, 223, 254, 220, 220, 220, 96, 54, 54, 54, 0, 0, 0, 0, 0, 43, 43, 43, 0, 203, 203, 203, 109, 223, 223, 223, 252, 219, 219, 219, 56, 52, 52, 52, 0, 0, 0, 0, 0, 0, 0, 0, 0, 162, 162, 162, 0, 221, 221, 221, 181, 223, 223, 223, 234, 134, 134, 134, 1, 56, 56, 56, 0, 166, 166, 166, 0, 222, 222, 222, 162, 223, 223, 223, 214, 166, 166, 166, 0, 55, 55, 55, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 221, 221, 221, 87, 223, 223, 223, 254, 221, 221, 221, 35, 167, 167, 167, 8, 223, 223, 223, 207, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 214, 165, 165, 165, 11, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 87, 223, 223, 223, 254, 222, 222, 222, 37, 0, 0, 0, 0, 214, 214, 214, 37, 223, 223, 223, 241, 223, 223, 223, 244, 215, 215, 215, 44, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 164, 164, 164, 0, 223, 223, 223, 180, 223, 223, 223, 235, 155, 155, 155, 1, 0, 0, 0, 0, 53, 53, 53, 0, 223, 223, 223, 88, 222, 222, 222, 98, 54, 54, 54, 0, 0, 0, 0, 0, 56, 56, 56, 0, 221, 221, 221, 39, 219, 219, 219, 160, 223, 223, 223, 254, 221, 221, 221, 98, 55, 55, 55, 0, 0, 0, 0, 0, 0, 0, 0, 0, 56, 56, 56, 0, 56, 56, 56, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 62, 223, 223, 223, 254, 223, 223, 223, 247, 222, 222, 222, 118, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 167, 167, 167, 31, 223, 223, 223, 89, 217, 217, 217, 28, 54, 54, 54, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 12,
"mipmaps": false,
"width": 12
}

[sub_resource type="ImageTexture" id=6]
image = SubResource( 29 )
size = Vector2( 12, 12 )

[sub_resource type="Image" id=30]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 222, 222, 222, 0, 221, 221, 221, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 180, 222, 222, 222, 207, 221, 221, 221, 53, 221, 221, 221, 0, 218, 218, 218, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 252, 222, 222, 222, 134, 218, 218, 218, 7, 219, 219, 219, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 222, 222, 222, 214, 220, 220, 220, 52, 221, 221, 221, 0, 218, 218, 218, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 252, 222, 222, 222, 134, 218, 218, 218, 7, 218, 218, 218, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 222, 222, 222, 181, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 180, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 252, 222, 222, 222, 134, 218, 218, 218, 7, 218, 218, 218, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 222, 222, 222, 214, 220, 220, 220, 52, 221, 221, 221, 0, 218, 218, 218, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 252, 222, 222, 222, 134, 218, 218, 218, 7, 219, 219, 219, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 152, 222, 222, 222, 191, 220, 220, 220, 52, 221, 221, 221, 0, 218, 218, 218, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 222, 222, 222, 0, 220, 220, 220, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=8]
flags = 0
flags = 0
image = SubResource( 30 )
size = Vector2( 16, 16 )

[sub_resource type="Image" id=31]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 191, 191, 191, 13, 64, 64, 64, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 64, 64, 0, 191, 191, 191, 13, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 191, 191, 191, 13, 255, 255, 255, 190, 255, 255, 255, 127, 64, 64, 64, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 64, 64, 0, 255, 255, 255, 127, 255, 255, 255, 190, 191, 191, 191, 13, 0, 0, 0, 0, 0, 0, 0, 0, 64, 64, 64, 0, 255, 255, 255, 127, 255, 255, 255, 229, 255, 255, 255, 126, 64, 64, 64, 0, 64, 64, 64, 0, 255, 255, 255, 126, 255, 255, 255, 229, 255, 255, 255, 127, 64, 64, 64, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 64, 64, 0, 255, 255, 255, 128, 255, 255, 255, 229, 255, 255, 255, 125, 255, 255, 255, 125, 255, 255, 255, 229, 255, 255, 255, 128, 64, 64, 64, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 128, 128, 0, 255, 255, 255, 129, 255, 255, 255, 229, 255, 255, 255, 229, 255, 255, 255, 129, 128, 128, 128, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 64, 64, 0, 255, 255, 255, 127, 255, 255, 255, 229, 255, 255, 255, 229, 255, 255, 255, 127, 64, 64, 64, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 64, 64, 0, 255, 255, 255, 126, 255, 255, 255, 229, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 229, 255, 255, 255, 126, 64, 64, 64, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 64, 64, 0, 255, 255, 255, 125, 255, 255, 255, 229, 255, 255, 255, 128, 64, 64, 64, 0, 64, 64, 64, 0, 255, 255, 255, 128, 255, 255, 255, 229, 255, 255, 255, 125, 64, 64, 64, 0, 0, 0, 0, 0, 0, 0, 0, 0, 191, 191, 191, 12, 255, 255, 255, 190, 255, 255, 255, 129, 128, 128, 128, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 128, 128, 0, 255, 255, 255, 129, 255, 255, 255, 190, 191, 191, 191, 12, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 191, 191, 191, 13, 191, 191, 191, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 191, 191, 191, 0, 191, 191, 191, 13, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 12,
"mipmaps": false,
"width": 12
}

[sub_resource type="ImageTexture" id=12]
image = SubResource( 31 )
size = Vector2( 12, 12 )

[sub_resource type="Image" id=32]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 191, 69, 69, 32, 255, 92, 92, 93, 64, 23, 23, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 23, 23, 0, 255, 92, 92, 93, 191, 68, 68, 32, 0, 0, 0, 0, 0, 0, 0, 0, 255, 92, 92, 94, 255, 93, 93, 255, 255, 92, 92, 141, 64, 23, 23, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 23, 23, 0, 255, 92, 92, 141, 255, 93, 93, 255, 255, 92, 92, 94, 0, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 0, 255, 69, 69, 142, 255, 93, 93, 255, 255, 92, 92, 140, 64, 23, 23, 0, 64, 23, 23, 0, 255, 92, 92, 140, 255, 93, 93, 255, 255, 69, 69, 142, 191, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 0, 255, 69, 69, 143, 255, 93, 93, 255, 255, 92, 92, 139, 255, 92, 92, 139, 255, 93, 93, 255, 255, 69, 69, 143, 191, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 0, 255, 69, 69, 144, 255, 93, 93, 255, 255, 93, 93, 255, 255, 69, 69, 144, 191, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 23, 23, 0, 255, 85, 85, 141, 255, 93, 93, 255, 255, 93, 93, 255, 255, 85, 85, 141, 64, 23, 23, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 23, 23, 0, 255, 92, 92, 141, 255, 93, 93, 255, 255, 69, 69, 142, 255, 69, 69, 142, 255, 93, 93, 255, 255, 92, 92, 140, 64, 23, 23, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 23, 23, 0, 255, 92, 92, 139, 255, 93, 93, 255, 255, 69, 69, 143, 191, 0, 0, 0, 191, 0, 0, 0, 255, 69, 69, 143, 255, 93, 93, 255, 255, 92, 92, 139, 64, 23, 23, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 92, 92, 96, 255, 93, 93, 255, 255, 69, 69, 144, 191, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 0, 255, 69, 69, 144, 255, 93, 93, 255, 255, 92, 92, 96, 0, 0, 0, 0, 0, 0, 0, 0, 191, 69, 69, 33, 255, 92, 92, 99, 191, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 1, 255, 92, 92, 99, 191, 69, 69, 33, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 12,
"mipmaps": false,
"width": 12
}

[sub_resource type="ImageTexture" id=14]
image = SubResource( 32 )
size = Vector2( 12, 12 )

[node name="Exp1_UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
theme = ExtResource( 10 )
script = ExtResource( 8 )

[node name="info" type="VBoxContainer" parent="."]
margin_left = 604.0
margin_top = 4.0
margin_right = 681.0
margin_bottom = 78.0

[node name="FPS" type="Label" parent="info"]
margin_top = -1.0
margin_right = 77.0
margin_bottom = 24.4
text = "FPS:"

[node name="Height" type="Label" parent="info"]
margin_top = 27.0
margin_right = 77.0
margin_bottom = 52.4
text = "h:"

[node name="Velocity" type="Label" parent="info"]
margin_top = 55.0
margin_right = 77.0
margin_bottom = 80.4
text = "v:"

[node name="COE_info" type="Control" parent="."]
margin_left = 49.0
margin_top = 402.0
margin_right = 288.0
margin_bottom = 633.0

[node name="PieChart" type="Panel" parent="COE_info"]
margin_left = 217.0
margin_top = 103.0
margin_right = 377.0
margin_bottom = 260.0

[node name="Pie" type="TextureProgress" parent="COE_info/PieChart"]
margin_left = 16.0
margin_top = 16.0
margin_right = 144.0
margin_bottom = 144.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
fill_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="COE_info/PieChart"]
margin_left = 96.0
margin_top = 131.0
margin_right = 166.0
margin_bottom = 181.0
theme = ExtResource( 10 )
alignment = 1

[node name="Label" type="Label" parent="COE_info/PieChart/HBoxContainer"]
margin_left = 9.0
margin_top = 1.0
margin_right = 34.4
margin_bottom = 47.4
custom_colors/font_color = Color( 0, 0.537255, 0.631373, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
text = "KE
"

[node name="Label2" type="Label" parent="COE_info/PieChart/HBoxContainer"]
margin_left = 37.0
margin_top = 1.0
margin_right = 61.4
margin_bottom = 47.4
custom_colors/font_color = Color( 0.862745, 0.101961, 0.203922, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
text = "PE
"

[node name="VerticalBars" type="Control" parent="COE_info"]
margin_top = -53.0
margin_right = 203.0
margin_bottom = 315.0

[node name="ke" type="ProgressBar" parent="COE_info/VerticalBars"]
margin_left = 17.0
margin_top = 313.0
margin_right = 317.0
margin_bottom = 363.0
rect_min_size = Vector2( 150, 25 )
rect_rotation = -90.0
theme = SubResource( 1 )
custom_styles/fg = SubResource( 26 )

[node name="pe" type="ProgressBar" parent="COE_info/VerticalBars"]
margin_left = 76.0
margin_top = 313.0
margin_right = 376.0
margin_bottom = 363.0
rect_min_size = Vector2( 150, 25 )
rect_rotation = -90.0
theme = SubResource( 1 )
custom_styles/fg = SubResource( 27 )

[node name="te" type="ProgressBar" parent="COE_info/VerticalBars"]
margin_left = 135.0
margin_top = 313.0
margin_right = 435.0
margin_bottom = 363.0
rect_min_size = Vector2( 150, 25 )
rect_rotation = -89.9999
theme = SubResource( 1 )
custom_styles/fg = SubResource( 28 )

[node name="ke_l" type="Label" parent="COE_info/VerticalBars"]
margin_left = 29.0
margin_top = 316.0
margin_right = 54.4
margin_bottom = 341.4
text = "KE"

[node name="pe_l" type="Label" parent="COE_info/VerticalBars"]
margin_left = 89.0
margin_top = 316.0
margin_right = 113.4
margin_bottom = 341.4
text = "PE"

[node name="te_l" type="Label" parent="COE_info/VerticalBars"]
margin_left = 148.0
margin_top = 317.0
margin_right = 172.4
margin_bottom = 342.4
text = "TE"

[node name="UI" type="Panel" parent="."]
margin_left = 1082.0
margin_top = 22.0
margin_right = 1262.0
margin_bottom = 236.0

[node name="b_toggle" type="CheckButton" parent="UI"]
margin_left = 16.0
margin_top = 13.0
margin_right = 176.0
margin_bottom = 53.0
pressed = true
text = "Vertical Bars"

[node name="p_toggle" type="CheckButton" parent="UI"]
margin_left = 17.0
margin_top = 52.0
margin_right = 177.0
margin_bottom = 92.0
pressed = true
text = "Pie Chart"

[node name="Reset_button" type="Button" parent="UI"]
margin_left = 44.0
margin_top = 143.0
margin_right = 137.0
margin_bottom = 165.0
text = "Reset"
icon = SubResource( 6 )

[node name="Start_button" type="Button" parent="UI"]
margin_left = 44.0
margin_top = 115.0
margin_right = 137.0
margin_bottom = 137.0
text = "Start"
icon = SubResource( 8 )

[node name="Graph_Window" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -375.0
margin_top = -310.0
margin_right = 436.0
margin_bottom = 310.0
theme = ExtResource( 10 )
custom_colors/title_color = Color( 0.745098, 0.745098, 0.745098, 1 )
custom_icons/close_highlight = SubResource( 12 )
custom_icons/close = SubResource( 14 )
window_title = "Visualization"

[node name="Slider_Panel" type="Panel" parent="Graph_Window"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -236.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -255.0

[node name="Mass_Label" type="Label" parent="Graph_Window/Slider_Panel"]
unique_name_in_owner = true
margin_left = 181.0
margin_top = 108.0
margin_right = 205.0
margin_bottom = 133.4
text = "1"
align = 1
valign = 1

[node name="Gravity_Label" type="Label" parent="Graph_Window/Slider_Panel"]
unique_name_in_owner = true
margin_left = 180.0
margin_top = 46.0
margin_right = 204.0
margin_bottom = 71.4
text = "9.8"
align = 1
valign = 1

[node name="Mass_Slider" type="HSlider" parent="Graph_Window/Slider_Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -94.0
margin_top = 136.0
margin_right = 97.0
margin_bottom = 167.0
min_value = 10.0
max_value = 50.0
value = 10.0

[node name="Label" type="Label" parent="Graph_Window/Slider_Panel/Mass_Slider"]
margin_left = 2.0
margin_top = -29.0
margin_right = 44.4
margin_bottom = -3.6
text = "Mass"

[node name="Label" type="Label" parent="Graph_Window/Slider_Panel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 73.4
margin_bottom = 41.4
text = "Gravity"

[node name="Gravity_Slider" type="HSlider" parent="Graph_Window/Slider_Panel"]
margin_left = 16.0
margin_top = 76.0
margin_right = 207.0
margin_bottom = 108.0
min_value = 5.0
max_value = 20.0
step = 0.1
value = 9.8

[node name="GravityOption" type="OptionButton" parent="Graph_Window/Slider_Panel"]
margin_left = 16.0
margin_top = 47.0
margin_right = 129.0
margin_bottom = 70.0

[node name="Label2" type="Label" parent="Graph_Window/Slider_Panel"]
margin_left = 15.0
margin_top = 185.0
margin_right = 74.0
margin_bottom = 210.4
text = "Predict"

[node name="OptionButton" type="OptionButton" parent="Graph_Window/Slider_Panel"]
margin_left = 77.0
margin_top = 185.0
margin_right = 207.0
margin_bottom = 208.0

[node name="HSeparator" type="HSeparator" parent="Graph_Window/Slider_Panel"]
margin_left = 14.0
margin_top = 170.0
margin_right = 208.0
margin_bottom = 174.0

[node name="Button" type="Button" parent="Graph_Window/Slider_Panel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 19.0
margin_top = -126.0
margin_right = 95.0
margin_bottom = -102.0
text = "Predict"
icon_align = 2

[node name="Button2" type="Button" parent="Graph_Window/Slider_Panel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 129.0
margin_top = -126.0
margin_right = 205.0
margin_bottom = -102.0
text = "Graph it!"
icon_align = 2

[node name="ProgressBar" type="ProgressBar" parent="Graph_Window/Slider_Panel"]
margin_left = 63.0
margin_top = 256.0
margin_right = 206.0
margin_bottom = 279.0
value = 23.0

[node name="ProgressBar2" type="ProgressBar" parent="Graph_Window/Slider_Panel"]
margin_left = 62.0
margin_top = 285.0
margin_right = 206.0
margin_bottom = 308.0
value = 14.0

[node name="ProgressBar3" type="ProgressBar" parent="Graph_Window/Slider_Panel"]
margin_left = 62.0
margin_top = 314.0
margin_right = 205.0
margin_bottom = 337.0
value = 50.0

[node name="Label3" type="Label" parent="Graph_Window/Slider_Panel"]
margin_left = 4.0
margin_top = 254.0
margin_right = 53.0
margin_bottom = 280.0
text = "MAE:"

[node name="Label4" type="Label" parent="Graph_Window/Slider_Panel"]
margin_left = 5.0
margin_top = 282.0
margin_right = 54.0
margin_bottom = 308.0
text = "MSE:"

[node name="Label5" type="Label" parent="Graph_Window/Slider_Panel"]
margin_left = 5.0
margin_top = 310.0
margin_right = 54.0
margin_bottom = 336.0
text = "MPE:"

[node name="Data_Panel" type="Panel" parent="Graph_Window"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -236.0
margin_top = 381.0
margin_right = -134.0
margin_bottom = -18.0

[node name="Table" type="Control" parent="Graph_Window/Data_Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
table_header_theme = ExtResource( 9 )
table_header_cell_theme = ExtResource( 9 )
table_row_theme = ExtResource( 9 )
table_row_cell_theme = ExtResource( 9 )

[node name="Data_m_Panel" type="Panel" parent="Graph_Window"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -118.0
margin_top = 381.0
margin_right = -16.0
margin_bottom = -18.0

[node name="Table" type="Control" parent="Graph_Window/Data_m_Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
table_header_theme = null
table_header_cell_theme = null
table_row_theme = null
table_row_cell_theme = null

[node name="Graph_Panel" type="Panel" parent="Graph_Window"]
margin_left = 24.0
margin_top = 14.0
margin_right = 547.0
margin_bottom = 602.0

[connection signal="toggled" from="UI/b_toggle" to="." method="_on_b_toggle_toggled"]
[connection signal="toggled" from="UI/p_toggle" to="." method="_on_p_toggle_toggled"]
[connection signal="pressed" from="UI/Reset_button" to="." method="_on_Reset_button_pressed"]
[connection signal="pressed" from="UI/Start_button" to="." method="_on_Start_button_pressed"]
[connection signal="popup_hide" from="Graph_Window" to="." method="_on_Graph_Window_popup_hide"]
[connection signal="value_changed" from="Graph_Window/Slider_Panel/Mass_Slider" to="." method="_on_Mass_Slider_value_changed"]
[connection signal="value_changed" from="Graph_Window/Slider_Panel/Gravity_Slider" to="." method="_on_Gravity_Slider_value_changed"]
[connection signal="item_selected" from="Graph_Window/Slider_Panel/GravityOption" to="." method="_on_GravityOption_item_selected"]
[connection signal="pressed" from="Graph_Window/Slider_Panel/Button" to="." method="_on_Button_pressed"]
